--- a/index.html
+++ b/index.html
@@ -14,5 +14,37 @@
 </head>
 <body>
     
+    <header>
+
+        <nav id="primary">
+
+            <div>
+                <img src="assets/icons/List.svg" alt="Ícone de menu">
+                <strong>Menu</strong>
+            </div>
+
+            <div>
+                <img src="assets/Logo.svg" alt="TechNews logo">
+            </div>
+
+            <div>
+                <strong>Buscar</strong>
+                <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa">
+            </div>
+
+        </nav>
+
+        <nav id="secondary">
+            <a href="">Inteligência Artificial</a>
+            <a href="">Blockchain</a>
+            <a href="">Hologramas</a>
+            <a href="">Internet</a>
+            <a href="">Vestíveis</a>
+            <a href="">Realidade Aumentada</a>
+            <a href="">Realidade  Virtual</a>
+        </nav>
+
+    </header>
+
 </body>
 </html>
