💄 feat: Estilização CSS do header

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     
-    <header>
+    <header class="container">
 
-        <nav id="primary">
+        <nav id="primary" class="grid grid-flow-col">
 
             <div>
                 <img src="assets/icons/List.svg" alt="Ícone de menu">
@@ -34,7 +34,7 @@
 
         </nav>
 
-        <nav id="secondary">
+        <nav id="secondary" class="grid grid-flow-col">
             <a href="">Inteligência Artificial</a>
             <a href="">Blockchain</a>
             <a href="">Hologramas</a>
