--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <section id="featured" class="grid grid-flow-col gap-16">
 
-            <div>
+            <div class="card">
                 <img src="assets/images/Image 01.png" alt="">
             </div>
 
