--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
         </section>
 
-        <div>
+        <aside>
 
             <div id="ads">
                 <img src="assets/Ads.png" alt="">
@@ -230,7 +230,7 @@
                     </a>
                 </header>
 
-                <div id="grid" class="fap-32">
+                <div class="grid gap-32">
                     <article class="grid grid-flow-col gap-16">
 
                         <div>
@@ -240,7 +240,7 @@
                         <div>
                             <span class="content-tag">Software</span>
                             <h3 class="text-xl">
-                                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
+                                Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológi...
                             </h3>
                         </div>
 
@@ -255,7 +255,7 @@
                         <div>
                             <span class="content-tag">Realidade Virtual</span>
                             <h3 class="text-xl">
-                                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet..
+                                Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensori..
                             </h3>
                         </div>
 
@@ -270,7 +270,7 @@
                         <div>
                             <span class="content-tag">Criptomoedas</span>
                             <h3 class="text-xl">
-                                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...
+                                Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimi...
                             </h3>
                         </div>
 
@@ -285,7 +285,7 @@
                         <div>
                             <span class="content-tag">Drones</span>
                             <h3 class="text-xl">
-                                Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce....
+                                Empresas de e-commerce implementam frota de drones para entregas rápidas, transforman....
                             </h3>
                         </div>
 
@@ -300,7 +300,7 @@
                         <div>
                             <span class="content-tag">Impressão 3d</span>
                             <h3 class="text-xl">
-                                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...
+                                Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medici...
                             </h3>
                         </div>
 
@@ -309,7 +309,7 @@
 
             </section>
 
-        </div>
+        </aside>
         
     </main>
 
